Add navigation bar

--- a/addNewCar.html
+++ b/addNewCar.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Kreiraj novi auto</h1>
+    <nav>
+        <ul>
+            <li><a href="/">Početna</a></li>
+            <li><a href="/about">O Nama</a></li>
+            <li><a href="/addcar">Dodaj novi auto</a></li>
+        </ul>
+    </nav>
     <form action="/dodaj-auto" method="post">
         <label for="make">Proizvodac:</label>
         <input type="text" id="proizvodac" name="proizvodac" required>
