--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Dobrodošli u Online Trgovinu Automobilima</h1>
+    <nav>
+        <ul>
+            <li><a href="/">Početna</a></li>
+            <li><a href="/about">O Nama</a></li>
+            <li><a href="/addcar">Dodaj novi auto</a></li>
+        </ul>
+    </nav>
     <p>Naša ponuda uključuje širok spektar automobila po povoljnim cijenama.</p>
     <h2>Trenutna ponuda automobila:</h2>
     <div class="car-list">
