Change nav bar element order and add footer with copyright notice

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
             <nav>
                 <ul>
                     <li><a href="/">Početna</a></li>
-                    <li><a href="/about">O Nama</a></li>
                     <li><a href="/addcar">Dodaj novi auto</a></li>
+                    <li><a href="/about">O Nama</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,8 +28,13 @@
             <h2>O Nama</h2>
             <p>Dobrodošli u našu online trgovinu automobilima! Mi smo vodeća platforma za prodaju i kupnju automobila u Hrvatskoj. Naša misija je pružiti vam najbolju uslugu i najkvalitetnije automobile po najpovoljnijim cijenama.</p>
             <p>Naša ponuda uključuje širok spektar vozila, od novih do rabljenih automobila, svih marki i modela. Svaki automobil u našoj ponudi prolazi detaljan pregled kako bismo osigurali njegovu kvalitetu i pouzdanost.</p>
-            <p>Naš tim stručnjaka stoji vam na raspolaganju za sva pitanja i savjete vezane uz kupnju automobila. Kontaktirajte nas putem naše kontakt stranice ili posjetite našu fizičku lokaciju za više informacija.</p>
+            <p>Naš tim stručnjaka stoji vam na raspolaganju za sva pitanja i savjete vezane uz kupnju automobila. Kontaktirajte nas putem email-a za više informacija.</p>
             <p>Hvala vam što ste odabrali našu online trgovinu automobilima. Radujemo se što ćemo vam pomoći pronaći vaš savršeni automobil!</p>
+        </div>
+        <div>
+            <h2>Kontakt</h2>
+            <p>Email:onlinetrgovinaautomobilima@mail.com</p>
+            <p>Telefon: +385 91 123 4567</p>
         </div>
     </div>
 
