--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <nav>
         <ul>
             <li><a href="/">Početna</a></li>
-            <li><a href="/about">O Nama</a></li>
             <li><a href="/addcar">Dodaj novi auto</a></li>
+            <li><a href="/about">O Nama</a></li>
+            
         </ul>
     </nav>
     <p>Naša ponuda uključuje širok spektar automobila po povoljnim cijenama.</p>
@@ -36,5 +37,8 @@
     </div>
     <a href="/about">O nama</a>
     <a href="/addcar">Dodaj novi auto</a>
+    <footer>
+        <p>Online Trgovina Automobilima &copy; 2025</p>
+    </footer>
 </body>
 </html>
