--- a/addNewCar.html
+++ b/addNewCar.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kreiraj novi auto</title>
+    <title>Dodaj novi auto</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Kreiraj novi auto</h1>
+    <h1>Dodaj novi auto</h1>
     <nav>
         <ul>
             <li><a href="/">Početna</a></li>
-            <li><a href="/about">O Nama</a></li>
             <li><a href="/addcar">Dodaj novi auto</a></li>
+            <li><a href="/about">O Nama</a></li>
+            
         </ul>
     </nav>
     <form action="/dodaj-auto" method="post">
@@ -33,5 +34,8 @@
 
         <button type="submit">Spremi</button>
     </form>
+    <footer>
+        <p>Online Trgovina Automobilima &copy; 2025</p>
+    </footer>
 </body>
 </html>
