add car images to the product listing

--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
     <div class="car-list">
         <div class="car-item">
             <h3>Audi A3</h3>
+            <img src="/images/Audi_A3_8Y_Sedan_IMG_5936.jpg" alt="Audi A3" width="300">
             <p>Godina: 2020</p>
             <p>Cijena: 25,000 EUR</p>
         </div>
         <div class="car-item">
             <h3>BMW X5</h3>
+            <img src="/images/BMW_X5.jpg" alt="BMW X5" width="300">
             <p>Godina: 2019</p>
             <p>Cijena: 45,000 EUR</p>
         </div>
         <div class="car-item">
             <h3>Mercedes-Benz C-Class</h3>
+            <img src="/images/Mercedes_c-class.jpg" alt="Mercedes C Class" width="300">
             <p>Godina: 2021</p>
             <p>Cijena: 50,000 EUR</p>
         </div>
